--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       margin-bottom: 30px;
   }  
   .jumbotron {
-      background-color: #f4511e;
+      background-color: #5c85d6;
       color: #fff;
       padding: 100px 25px;
       font-family: Montserrat, sans-serif;
@@ -42,11 +42,11 @@
       background-color: #f6f6f6;
   }
   .logo-small {
-      color: #f4511e;
+      color: #5c85d6;
       font-size: 50px;
   }
   .logo {
-      color: #f4511e;
+      color: #5c85d6;
       font-size: 200px;
   }
   .thumbnail {
@@ -61,13 +61,13 @@
   }
   .carousel-control.right, .carousel-control.left {
       background-image: none;
-      color: #f4511e;
+      color: #5c85d6;
   }
   .carousel-indicators li {
-      border-color: #f4511e;
+      border-color: #5c85d6;
   }
   .carousel-indicators li.active {
-      background-color: #f4511e;
+      background-color: #5c85d6;
   }
   .item h4 {
       font-size: 19px;
@@ -80,7 +80,7 @@
       font-style: normal;
   }
   .panel {
-      border: 1px solid #f4511e; 
+      border: 1px solid #5c85d6; 
       border-radius:0 !important;
       transition: box-shadow 0.5s;
   }
@@ -88,13 +88,13 @@
       box-shadow: 5px 0px 40px rgba(0,0,0, .2);
   }
   .panel-footer .btn:hover {
-      border: 1px solid #f4511e;
+      border: 1px solid #5c85d6;
       background-color: #fff !important;
-      color: #f4511e;
+      color: #5c85d6;
   }
   .panel-heading {
       color: #fff !important;
-      background-color: #f4511e !important;
+      background-color: #5c85d6 !important;
       padding: 25px;
       border-bottom: 1px solid transparent;
       border-top-left-radius: 0px;
@@ -114,12 +114,12 @@
   }
   .panel-footer .btn {
       margin: 15px 0;
-      background-color: #f4511e;
+      background-color: #5c85d6;
       color: #fff;
   }
   .navbar {
       margin-bottom: 0;
-      background-color: #f4511e;
+      background-color: #5c85d6;
       z-index: 9999;
       border: 0;
       font-size: 12px !important;
@@ -132,7 +132,7 @@
       color: #fff !important;
   }
   .navbar-nav li a:hover, .navbar-nav li.active a {
-      color: #f4511e !important;
+      color: #5c85d6 !important;
       background-color: #fff !important;
   }
   .navbar-default .navbar-toggle {
@@ -142,7 +142,7 @@
   footer .glyphicon {
       font-size: 20px;
       margin-bottom: 20px;
-      color: #f4511e;
+      color: #5c85d6;
   }
   .slideanim {visibility:hidden;}
   .slide {
@@ -216,21 +216,21 @@
 <div class="jumbotron text-center">
   <h1>MVG Solu&ccedil;&otilde;es Industriais</h1> 
   <p>We specialize in blablabla</p> 
-  <form>
+  <!--<form>
     <div class="input-group">
       <input type="email" class="form-control" size="50" placeholder="Email Address" required>
       <div class="input-group-btn">
         <button type="button" class="btn btn-danger">Subscribe</button>
       </div>
     </div>
-  </form>
+  </form>-->
 </div>
 
 <!-- Container (About Section) -->
 <div id="about" class="container-fluid">
   <div class="row">
     <div class="col-sm-8">
-      <h2>About Company Page</h2><br>
+      <h2>SOBRE</h2><br>
       <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</h4><br>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
       <br><button class="btn btn-default btn-lg">Get in Touch</button>
@@ -257,7 +257,7 @@
 
 <!-- Container (Services Section) -->
 <div id="services" class="container-fluid text-center">
-  <h2>SERVICES</h2>
+  <h2>SERVI&Ccedil;OS</h2>
   <h4>What we offer</h4>
   <br>
   <div class="row slideanim">
@@ -299,28 +299,28 @@
 
 <!-- Container (Portfolio Section) -->
 <div id="portfolio" class="container-fluid text-center bg-grey">
-  <h2>Portfolio</h2><br>
+  <h2>PRODUTOS</h2><br>
   <h4>What we have created</h4>
   <div class="row text-center slideanim">
     <div class="col-sm-4">
       <div class="thumbnail">
-        <img src="paris.jpg" alt="Paris" width="400" height="300">
-        <p><strong>Paris</strong></p>
-        <p>Yes, we built Paris</p>
+        <img src="images/pic.jpg" alt="" width="200" height="100">
+        <p><strong>Produto 1</strong></p>
+        <p>Yes, we built it</p>
       </div>
     </div>
     <div class="col-sm-4">
       <div class="thumbnail">
-        <img src="newyork.jpg" alt="New York" width="400" height="300">
-        <p><strong>New York</strong></p>
-        <p>We built New York</p>
+        <img src="images/pic.jpg" alt="" width="200" height="100">
+        <p><strong>Produto 2</strong></p>
+        <p>Yes, we built it</p>
       </div>
     </div>
     <div class="col-sm-4">
       <div class="thumbnail">
-        <img src="sanfran.jpg" alt="San Francisco" width="400" height="300">
-        <p><strong>San Francisco</strong></p>
-        <p>Yes, San Fran is ours</p>
+        <img src="images/pic.jpg" alt="" width="200" height="100">
+        <p><strong>Produto 3</strong></p>
+        <p>Yes, we built it</p>
       </div>
     </div>
   </div><br>
@@ -362,7 +362,7 @@
 <!-- Container (Pricing Section) -->
 <div id="pricing" class="container-fluid">
   <div class="text-center">
-    <h2>Pricing</h2>
+    <h2>XXXXXX</h2>
     <h4>Choose a payment plan that works for you</h4>
   </div>
   <div class="row slideanim">
@@ -428,13 +428,13 @@
 
 <!-- Container (Contact Section) -->
 <div id="contact" class="container-fluid bg-grey">
-  <h2 class="text-center">CONTACT</h2>
+  <h2 class="text-center">CONTATO</h2>
   <div class="row">
     <div class="col-sm-5">
       <p>Contact us and we'll get back to you within 24 hours.</p>
-      <p><span class="glyphicon glyphicon-map-marker"></span> Chicago, US</p>
-      <p><span class="glyphicon glyphicon-phone"></span> +00 1515151515</p>
-      <p><span class="glyphicon glyphicon-envelope"></span> myemail@something.com</p>
+      <p><span class="glyphicon glyphicon-map-marker"></span> S&atilde;o Paulo, BR</p>
+      <p><span class="glyphicon glyphicon-phone"></span> +55 1515151515</p>
+      <p><span class="glyphicon glyphicon-envelope"></span> myemail@something.com.br</p>
     </div>
     <div class="col-sm-7 slideanim">
       <div class="row">
@@ -517,4 +517,3 @@ $(document).ready(function(){
 </script>
 
 </body>
-</html>
