--- a/index.html
+++ b/index.html
@@ -302,24 +302,31 @@
   <h2>PRODUTOS</h2><br>
   <h4>What we have created</h4>
   <div class="row text-center slideanim">
-    <div class="col-sm-4">
+    <div class="col-sm-3">
       <div class="thumbnail">
-        <img src="images/pic.jpg" alt="" width="200" height="100">
+        <img src="images/pic.jpg" alt="" width="200" height="100" style="width:90%">
         <p><strong>Produto 1</strong></p>
         <p>Yes, we built it</p>
       </div>
     </div>
-    <div class="col-sm-4">
+    <div class="col-sm-3">
       <div class="thumbnail">
-        <img src="images/pic.jpg" alt="" width="200" height="100">
+        <img src="images/pic.jpg" alt="" width="200" height="100" style="width:90%">
         <p><strong>Produto 2</strong></p>
         <p>Yes, we built it</p>
       </div>
     </div>
-    <div class="col-sm-4">
+    <div class="col-sm-3">
       <div class="thumbnail">
-        <img src="images/pic.jpg" alt="" width="200" height="100">
+        <img src="images/pic.jpg" alt="" width="200" height="100" style="width:90%">
         <p><strong>Produto 3</strong></p>
+        <p>Yes, we built it</p>
+      </div>
+    </div>
+    <div class="col-sm-3">
+      <div class="thumbnail">
+        <img src="images/pic.jpg" alt="" width="200" height="100" style="width:90%">
+        <p><strong>Produto 4</strong></p>
         <p>Yes, we built it</p>
       </div>
     </div>
