--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
 </div>
 
 <!-- Container (About Section) -->
-<div id="about" class="container-fluid">
+<div id="about" class="container-fluid text-justify">
   <div class="row">
     <div class="col-sm-8">
       <h2>SOBRE</h2><br>
@@ -241,7 +241,7 @@
   </div>
 </div>
 
-<div class="container-fluid bg-grey">
+<div class="container-fluid bg-grey text-justify">
   <div class="row">
     <div class="col-sm-4">
       <span class="glyphicon glyphicon-globe logo slideanim"></span>
@@ -261,17 +261,17 @@
   <h4>What we offer</h4>
   <br>
   <div class="row slideanim">
-    <div class="col-sm-4">
+    <div class="col-xs-6 col-sm-4 col-md-4">
       <span class="glyphicon glyphicon-off logo-small"></span>
       <h4>POWER</h4>
       <p>Lorem ipsum dolor sit amet..</p>
     </div>
-    <div class="col-sm-4">
+    <div class="col-xs-6 col-sm-4 col-md-4">
       <span class="glyphicon glyphicon-heart logo-small"></span>
       <h4>LOVE</h4>
       <p>Lorem ipsum dolor sit amet..</p>
     </div>
-    <div class="col-sm-4">
+    <div class="col-xs-6 col-sm-4 col-md-4">
       <span class="glyphicon glyphicon-lock logo-small"></span>
       <h4>JOB DONE</h4>
       <p>Lorem ipsum dolor sit amet..</p>
@@ -279,17 +279,17 @@
   </div>
   <br><br>
   <div class="row slideanim">
-    <div class="col-sm-4">
+    <div class="col-xs-6 col-sm-4 col-md-4">
       <span class="glyphicon glyphicon-leaf logo-small"></span>
       <h4>GREEN</h4>
       <p>Lorem ipsum dolor sit amet..</p>
     </div>
-    <div class="col-sm-4">
+    <div class="col-xs-6 col-sm-4 col-md-4">
       <span class="glyphicon glyphicon-certificate logo-small"></span>
       <h4>CERTIFIED</h4>
       <p>Lorem ipsum dolor sit amet..</p>
     </div>
-    <div class="col-sm-4">
+    <div class="col-xs-6 col-sm-4 col-md-4">
       <span class="glyphicon glyphicon-wrench logo-small"></span>
       <h4 style="color:#303030;">HARD WORK</h4>
       <p>Lorem ipsum dolor sit amet..</p>
@@ -302,30 +302,30 @@
   <h2>PRODUTOS</h2><br>
   <h4>What we have created</h4>
   <div class="row text-center slideanim">
-    <div class="col-sm-3">
+    <div class="col-xs-6 col-sm-3 col-md-3">
       <div class="thumbnail">
-        <img src="images/pic.jpg" alt="" width="200" height="100" style="width:90%">
+        <img src="images/pic.jpg" alt="" width="200" height="100">
         <p><strong>Produto 1</strong></p>
         <p>Yes, we built it</p>
       </div>
     </div>
-    <div class="col-sm-3">
+    <div class="col-xs-6 col-sm-3 col-md-3">
       <div class="thumbnail">
-        <img src="images/pic.jpg" alt="" width="200" height="100" style="width:90%">
+        <img src="images/pic.jpg" alt="" width="200" height="100">
         <p><strong>Produto 2</strong></p>
         <p>Yes, we built it</p>
       </div>
     </div>
-    <div class="col-sm-3">
+    <div class="col-xs-6 col-sm-3 col-md-3">
       <div class="thumbnail">
-        <img src="images/pic.jpg" alt="" width="200" height="100" style="width:90%">
+        <img src="images/pic.jpg" alt="" width="200" height="100">
         <p><strong>Produto 3</strong></p>
         <p>Yes, we built it</p>
       </div>
     </div>
-    <div class="col-sm-3">
+    <div class="col-xs-6 col-sm-3 col-md-3">
       <div class="thumbnail">
-        <img src="images/pic.jpg" alt="" width="200" height="100" style="width:90%">
+        <img src="images/pic.jpg" alt="" width="200" height="100">
         <p><strong>Produto 4</strong></p>
         <p>Yes, we built it</p>
       </div>
@@ -463,6 +463,7 @@
 </div>
 
 <!-- Add Google Maps -->
+<!--
 <div id="googleMap" style="height:400px;width:100%;"></div>
 <script>
 function myMap() {
@@ -474,6 +475,7 @@ marker.setMap(map);
 }
 </script>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBu-916DdpKAjTmJNIgngS6HL_kDIKU0aU&callback=myMap"></script>
+-->
 <!--
 To use this code on your website, get a free API key from Google.
 Read more at: https://www.w3schools.com/graphics/google_maps_basic.asp
