--- a/index.html
+++ b/index.html
@@ -139,6 +139,12 @@
       border-color: transparent;
       color: #fff !important;
   }
+  
+  .navbar-default .navbar-toggle .icon-bar {
+    background-color: #fff;
+  }
+  
+
   footer .glyphicon {
       font-size: 20px;
       margin-bottom: 20px;
