--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
 
 <div class="jumbotron text-center">
   <h1>MVG Solu&ccedil;&otilde;es Industriais</h1> 
-  <p>We specialize in blablabla</p> 
+  <p>Agora s&oacute; falta voce falar o que vamos colocar aqui =)</p> 
   <!--<form>
     <div class="input-group">
       <input type="email" class="form-control" size="50" placeholder="Email Address" required>
